--- a/pom.xml
+++ b/pom.xml
@@ -27,20 +27,26 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- JavaMail相关依赖 -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.7</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
     <!--导入数据库相关依赖-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.16</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
-    <!--<dependency>-->
-      <!--<groupId>c3p0</groupId>-->
-      <!--<artifactId>c3p0</artifactId>-->
-      <!--<version>0.9.1.2</version>-->
-    <!--</dependency>-->
 
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
     <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
     <dependency>
       <groupId>commons-dbcp</groupId>
