--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com</groupId>
   <artifactId>com.moneysystem</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -27,7 +26,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
     <!-- JavaMail相关依赖 -->
     <dependency>
       <groupId>javax.mail</groupId>
