--- a/src/main/resources/dbcp.properties
+++ b/src/main/resources/dbcp.properties
@@ -1,4 +1,4 @@
 url=jdbc:mysql://94.191.116.143:3306/mm?serverTimezone=UTC
 user=root
 password=root123456
-driverClass=com.mysql.cj.jdbc.Driver
+driverClassName=com.mysql.cj.jdbc.Driver
